fix navbar color to be visible on login screen

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -128,7 +128,7 @@ html {
 }
 
 .nav {
-  background: rgba(0, 177, 131, 0.1);
+  background: rgba(227, 249, 241, 0.88);
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
 }
@@ -405,8 +405,8 @@ footer {
 
 .footer-social-media img {
   width: 50px;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 @media screen and (max-width: 768px) {
@@ -648,7 +648,7 @@ p {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  border: 2px solid #00b183;
+  border: 3px solid #00b183;
   color: #00b183;
 }
 /*button*/
